# xvoir

./: .gitlab-ci.yml  CMakeLists.txt  MANIFEST  Makefile  README.md  README.org  aux.c  config.in  flush.c  get_nbrecs_actifs.ftn90  langue.c  make_cdk  parent.c  strutil.c  widgets-util.c  xfsl-voir.cdk  xfsl-voir.f  xfsl-voir.ftn  xfsl-xvoir-2000.ftn90  xinit.c  xrecsel.c  xvoir  xvoir.f  xvoir.ftn  xvoir.ftn90
src/: CMakeLists.txt  aux.c  aux.h  balise  flush.c  flush.h  langue.c  langue.h  parent.c  template-xvoir.txt  widgets-util.c  widgets-util.h  xfsl-voir.cdk  xfsl-xvoir-2000.f90  xinit.c  xm-xselectstd.h  xrecsel.c  xrecsel.c.Amd64  xvoir.f90
